@@ -1,3 +1,9 @@
+2002-07-09  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* shimbun/sb-mailarc.el (shimbun-make-contents): Insert <base> tag.
+
+	* shimbun/sb-mhonarc.el (shimbun-make-contents): Insert <base> tag.
+
 2002-07-09  Hironori FUJII  <fujii@chi.its.hiroshima-cu.ac.jp>
 
 	* w3m.el (w3m-highlight-current-anchor): Don't infloop at the
